tests/unit/default/syntax-error/110-add-u.e.t
---- IN ----
+U
---- OUT ----
---- ERR ----
syntax: expected <table-columns-ref> after `+U` instead of EOL at position 2 - at line 1
---- EXIT ----
1
